Fix headers wrap behavior for lead, lead add and entries page

--- a/src/views/LeadAdd/LeadFilter/styles.scss
+++ b/src/views/LeadAdd/LeadFilter/styles.scss
@@ -1,15 +1,10 @@
-.lead-filters {
+.container {
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
+    justify-content: space-between;
 
-    .container {
-        display: flex;
-        align-items: center;
-        flex-wrap: wrap;
-        justify-content: space-between;
-
-        >* {
-            margin: var(--spacing-small);
-        }
+    >* {
+        margin: var(--spacing-small);
     }
 }
